--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,176 +1,145 @@
-<footer class="footer">
-    <div 
-        class="footer-body-content"
-        >
+<footer class="footer" id="footer">
+    <div class="footer-dark-mode"></div>
+    <div class="footer-body-content">
         <p class="footer-font-size footer-font-flex">
             &#169;
-            <span class="footer-currentYear"></span> 
+            <span class="footer-currentYear"></span>
             &#10072; All Rights Reserved &#10072;
         </p>
-        <div
-            class="footer-font-flex">
+        <div class="footer-font-flex">
             <p class="footer-font-size">
                 &thinsp;Developed with
             </p>
-            <img
-                class="footer-heart-icon-custom" 
-                src="./images/heart-footer.svg" 
-                alt="heart-icon"
-            >        
+            <img class="footer-heart-icon-custom" src="./images/icons/heart-footer.svg" alt="heart-icon">
             <p class="footer-font-size">
                 by&thinsp;
-                <a 
-                    href="#"
-                    role="button"
-                    class="footer-color-font"
-                    footer-data-modal-open
-                    >
+                <a href="#" role="button" class="footer-color-font" footer-data-modal-open>
                     GoIT Romania &#10072; &#8249;&#8260;&#8250; DivMasters
                 </a>
             </p>
-        </div> 
+        </div>
     </div>
-    
+
 </footer>
 
 
 <!-- modal section -->
 
-    <div 
-        class="footer-modal footer-is-hidden"
-        footer-data-modal
-        >
-        <div class="footer-modal-content">
-            <span 
-                class="footer-modal-close"
-                footer-data-modal-close
-                >
-                <img
-                class="footer-close-icon" 
-                src="./images/close-button.svg" 
-                alt="close-icon"
-                >
-            </span>
-            <h2 class="footer-font-title">Made by:</h2>
-            <div class="footer-content">
-                <div class="footer-cards">
-                    <div class="footer-team-card">
-                        <img
-                            class="footer-image-container" 
-                            src="./images/bogdan-nemes.jpg" 
-                            alt="Bogdan Nemes"
-                        />
-                        <div class="footer-member-info">
-                            <span class="footer-team-name">Bogdan Nemes</span>
-                            <em class="footer-team-function">Team leader</em>
-                        </div>
-                        <div class="footer-icon-cards">
-                            <img
-                                class="footer-icon" 
-                                src="./images/linkedin-footer.svg" 
-                                alt="linkedin"
-                            >
-                            <img
-                                class="footer-icon" 
-                                src="./images/github-footer.svg" 
-                                alt="github"
-                            >
-                        </div>
+<div class="footer-modal footer-is-hidden" footer-data-modal>
+    <div class="footer-modal-content footer-modal-dark-mode">
+        <div class="footer-modal-close" footer-data-modal-close>
+            <img class="footer-close-icon" src="./images/icons/close-button.svg" alt="close-icon">
+        </div>
+        <h2 class="footer-font-title">Made by:</h2>
+        <div class="footer-content">
+            <div class="footer-cards">
+                <div class="footer-team-card">
+                    <img class="footer-image-container" src="./images/bogdan-nemes.jpg" alt="Bogdan Nemes" />
+                    <div class="footer-member-info">
+                        <span class="footer-team-name">Bogdan Nemes</span>
+                        <em class="footer-team-function">Team leader</em>
                     </div>
-                    <div class="footer-team-card">
-                        <img
-                            class="footer-image-container" 
-                            src="./images/dan_retegan.jpg" 
-                            alt="Dan Retegan"
-                        />
-                        <div class="footer-member-info">
-                            <span class="footer-team-name">Dan Retegan</span>
+                    <div class="footer-icon-cards">
+                        <a 
+                            href="https://https://github.com/Tumoji" 
+                            class="footer-github-icon" 
+                            aria-label="github"
+                            >     
+                        </a>
+                        <a 
+                            href="https://linkedin.com/in/bogdan-nemes-b35841a7" 
+                            class="footer-linkedin-icon" 
+                            aria-label="linkedin"
+                            >
+                        </a>
+                    </div>
+                </div>
+                <div class="footer-team-card">
+                    <img class="footer-image-container" src="./images/dan_retegan.jpg" alt="Dan Retegan" />
+                    <div class="footer-member-info">
+                        <span class="footer-team-name">Dan Retegan</span>
                         <em class="footer-team-function">Scrum master</em>
-                        </div>
-                        <div class="footer-icon-cards">
-                            <img
-                                class="footer-icon" 
-                                src="./images/linkedin-footer.svg" 
-                                alt="linkedin"
-                            >
-                            <img
-                                class="footer-icon" 
-                                src="./images/github-footer.svg" 
-                                alt="github"
-                            >
-                        </div>
                     </div>
-                    <div class="footer-team-card">
-                        <img
-                            class="footer-image-container" 
-                            src="./images/ciprian-ropcean.jpg" 
-                            alt="Ciprian Ropcean"
-                        />
-                        <div class="footer-member-info">
-                            <span class="footer-team-name">Ciprian Ropcean</span>
+                    <div class="footer-icon-cards">
+                        <a 
+                            href="https://github.com/danretegan" 
+                            class="footer-github-icon" 
+                            aria-label="github"
+                            >     
+                        </a>
+                        <a 
+                            href="https://www.linkedin.com/in/dan-retegan-25a7a92a4" 
+                            class="footer-linkedin-icon" 
+                            aria-label="linkedin"
+                            >
+                        </a>
+                    </div>
+                </div>
+                <div class="footer-team-card">
+                    <img class="footer-image-container" src="./images/ciprian-ropcean.jpg" alt="Ciprian Ropcean" />
+                    <div class="footer-member-info">
+                        <span class="footer-team-name">Ciprian Ropcean</span>
                         <em class="footer-team-function">Frontend developer</em>
-                        </div>
-                        <div class="footer-icon-cards">
-                            <img
-                                class="footer-icon" 
-                                src="./images/linkedin-footer.svg" 
-                                alt="linkedin"
-                            >
-                            <img
-                                class="footer-icon" 
-                                src="./images/github-footer.svg" 
-                                alt="github"
-                            >
-                        </div>
                     </div>
-                    <div class="footer-team-card">
-                        <img
-                            class="footer-image-container" 
-                            src="./images/logo.png" 
-                            alt="Andrei Rusu"
-                        />
-                        <div class="footer-member-info">
-                            <span class="footer-team-name">Andrei Rusu</span>
+                    <div class="footer-icon-cards">
+                        <a 
+                            href="https://github.com/Cipick23" 
+                            class="footer-github-icon" 
+                            aria-label="github"
+                            >     
+                        </a>
+                        <a 
+                            href="https://www.linkedin.com/in/ciprianropcean/" 
+                            class="footer-linkedin-icon" 
+                            aria-label="linkedin"
+                            >
+                        </a>
+                    </div>
+                </div>
+                <div class="footer-team-card">
+                    <img class="footer-image-container" src="./images/andrei-rusu.jpg" alt="Andrei Rusu" />
+                    <div class="footer-member-info">
+                        <span class="footer-team-name">Andrei Rusu</span>
                         <em class="footer-team-function">Frontend developer</em>
-                        </div>
-                        <div class="footer-icon-cards">
-                            <img
-                                class="footer-icon" 
-                                src="./images/linkedin-footer.svg" 
-                                alt="linkedin"
-                            >
-                            <img
-                                class="footer-icon" 
-                                src="./images/github-footer.svg" 
-                                alt="github"
-                            >
-                        </div>
                     </div>
-                    <div class="footer-team-card">
-                        <img
-                            class="footer-image-container" 
-                            src="./images/logo.png" 
-                            alt="Simon Khawam"
-                        />
-                        <div class="footer-member-info">
-                            <span class="footer-team-name">Simon Khawam</span>
-                            <em class="footer-team-function">Frontend developer</em>
-                        </div>
-                        <div class="footer-icon-cards">
-                            <img
-                                class="footer-icon" 
-                                src="./images/linkedin-footer.svg" 
-                                alt="linkedin"
+                    <div class="footer-icon-cards">
+                        <a 
+                            href="https://https://github.com/Tumoji" 
+                            class="footer-github-icon" 
+                            aria-label="github"
+                            >     
+                        </a>
+                        <a 
+                            href="https://linkedin.com/in/bogdan-nemes-b35841a7" 
+                            class="footer-linkedin-icon" 
+                            aria-label="linkedin"
                             >
-                            <img
-                                class="footer-icon" 
-                                src="./images/github-footer.svg" 
-                                alt="github"
+                        </a>
+                    </div>
+                </div>
+                <div class="footer-team-card">
+                    <img class="footer-image-container" src="./images/simon-khawam.jpg" alt="Simon Khawam" />
+                    <div class="footer-member-info">
+                        <span class="footer-team-name">Simon Khawam</span>
+                        <em class="footer-team-function">Frontend developer</em>
+                    </div>
+                    <div class="footer-icon-cards">
+                        <a 
+                            href="https://https://github.com/Tumoji" 
+                            class="footer-github-icon" 
+                            aria-label="github"
+                            >     
+                        </a>
+                        <a 
+                            href="https://linkedin.com/in/bogdan-nemes-b35841a7" 
+                            class="footer-linkedin-icon" 
+                            aria-label="linkedin"
                             >
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    </div>
+</div>
+</div>
