--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -8,28 +8,28 @@
   <!-- Pagination -->
   <div class="center">
     <div class="pagination">
-      <a href="#">&laquo;</a>
-      <a href="#" class="active">1</a>
-      <a href="#">2</a>
-      <a href="#">3</a>
-      <a href="#">4</a>
-      <a href="#">5</a>
-      <a href="#">6</a>
-      <a href="#">7</a>
-      <a href="#">8</a>
-      <a href="#">9</a>
-      <a href="#">10</a>
-      <a href="#">11</a>
-      <a href="#">12</a>
-      <a href="#">13</a>
-      <a href="#">14</a>
-      <a href="#">15</a>
-      <a href="#">16</a>
-      <a href="#">17</a>
-      <a href="#">18</a>
-      <a href="#">19</a>
-      <a href="#">20</a>
-      <a href="#">&raquo;</a>
+      <button type="button">&laquo;</button>
+      <button type="button" class="active">1</button>
+      <button type="button">2</button>
+      <button type="button">3</button>
+      <button type="button">4</button>
+      <button type="button">5</button>
+      <button type="button">6</button>
+      <button type="button">7</button>
+      <button type="button">8</button>
+      <button type="button">9</button>
+      <button type="button">10</button>
+      <button type="button">11</button>
+      <button type="button">12</button>
+      <button type="button">13</button>
+      <button type="button">14</button>
+      <button type="button">15</button>
+      <button type="button">16</button>
+      <button type="button">17</button>
+      <button type="button">18</button>
+      <button type="button">19</button>
+      <button type="button">20</button>
+      <button type="button">&raquo;</button>
     </div>
   </div>
 
