--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -35,7 +35,11 @@
 
   <!-- Fixed scroll-up button -->
   <button type="button" class="fixedbutton" id="btn-back-to-top">
-    <img src="./images/icons/arrow-up.png" alt="arrow up" />
+    <img
+      src="./images/icons/arrow-up.png"
+      srcset="./images/icons/arrow-up@2x.png 2x"
+      alt="arrow up"
+    />
   </button>
 
   <script src="./js/scroll-button.js"></script>
