--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,7 +30,7 @@
       </button>
     </div>
     <div class="btn-container-2">
-      <button class="btn-53">
+      <a href="library.html" class="btn-53">
         <div class="original">MY LIBRARY</div>
         <div class="letters">
           <!-- Place each letter in its own element -->
@@ -45,7 +45,7 @@
           <span>R</span>
           <span>Y</span>
         </div>
-      </button>
+      </a>
     </div>
     <div class="search-container">
       <div class="form-container">
@@ -72,7 +72,7 @@
 </header>
 
 <script>
-    function redirectToIndex() {
-      window.location.href = 'index.html';
-    }
-  </script>
+  function redirectToIndex() {
+    window.location.href = 'index.html';
+  }
+</script>
