--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,7 +13,7 @@
             <img class="footer-heart-icon-custom" src="./images/icons/heart-footer.svg" alt="heart-icon">
             <p class="footer-font-size">
                 by&thinsp;
-                <a href="#" role="button" class="footer-color-font" footer-data-modal-open>
+                <a href="#" role="button" class="footer-color-font footer-data-modal-open">
                     GoIT Romania &#10072; &#8249;&#8260;&#8250; DivMasters
                 </a>
             </p>
@@ -25,9 +25,9 @@
 
 <!-- modal section -->
 
-<div class="footer-modal footer-is-hidden" footer-data-modal>
+<div class="footer-modal footer-is-hidden footer-data-modal">
     <div class="footer-modal-content footer-modal-dark-mode">
-        <div class="footer-modal-close" footer-data-modal-close>
+        <div class="footer-modal-close footer-data-modal-close">
             <img class="footer-close-icon" src="./images/icons/close-button.svg" alt="close-icon">
         </div>
         <h2 class="footer-font-title">Made by:</h2>
@@ -141,5 +141,4 @@
             </div>
         </div>
     </div>
-</div>
 </div>
