Am adaugat eventlistener pe butonul my library

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,8 +17,8 @@
         <i class="fas fa-circle"></i>
       </div>
     </div>
-    <div class="btn-container-1" onclick="redirectToIndex()">
-      <button class="btn-52">
+    <div class="btn-container-1">
+      <button class="btn-52" onclick="redirectToIndex()">
         <div class="original">HOME</div>
         <div class="letters">
           <!-- Place each letter in its own element -->
@@ -30,7 +30,7 @@
       </button>
     </div>
     <div class="btn-container-2">
-      <a href="library.html" class="btn-53">
+      <button class="btn-53">
         <div class="original">MY LIBRARY</div>
         <div class="letters">
           <!-- Place each letter in its own element -->
@@ -45,7 +45,7 @@
           <span>R</span>
           <span>Y</span>
         </div>
-      </a>
+      </button>
     </div>
     <div class="search-container">
       <div class="form-container">
