--- a/src/partials/my-library.html
+++ b/src/partials/my-library.html
@@ -1,113 +1,1 @@
-<!-- Header -->
-<header>
-  <section class="lib-header-section">
-    <div class="lib-dark-gradient-mobile"></div>
-    <img
-      class="lib-hero-image"
-      src="./images/filmoteka-main-image.jpg"
-      alt="Movie popcorn, 3D glasses and camera"
-    />
-    <div class="lib-logo-container">
-      <div class="lib-logo-alignment">
-        <a href="index.html"
-          ><img
-            class="lib-logo-icon"
-            src="./images/film-icon.svg"
-            alt="Film icon"
-        /></a>
-        <a class="link-to-homepage" href="index.html">
-          <span class="lib-logo-text">Filmoteka</span></a
-        >
-      </div>
-    </div>
-    <div class="lib-btn-toggle">
-      <div class="lib-btn1_container">
-        <i class="lib-fas fa-circle"></i>
-      </div>
-    </div>
-    <div class="lib-btn-container-1" onclick="redirectToIndex()">
-      <a href="index.html" class="lib-btn-52">
-        <div class="lib-original">HOME</div>
-        <div class="lib-letters">
-          <!-- Place each letter in its own element -->
-          <span>H</span>
-          <span>O</span>
-          <span>M</span>
-          <span>E</span>
-        </div>
-      </a>
-    </div>
-    <div class="lib-btn-container-2">
-      <button class="lib-btn-53">
-        <div class="lib-original">MY LIBRARY</div>
-        <div class="lib-letters">
-          <span>M</span>
-          <span>Y</span>
-          <span>&nbsp;</span>
-          <span>L</span>
-          <span>I</span>
-          <span>B</span>
-          <span>R</span>
-          <span>A</span>
-          <span>R</span>
-          <span>Y</span>
-        </div>
-      </button>
-    </div>
-
-    <div class="lib-btn-container-3">
-      <button class="lib-btn-54">
-        <div class="lib-original">Watched</div>
-        <div class="lib-letters">
-          <!-- Place each letter in its own element -->
-          <span>W</span>
-          <span>A</span>
-          <span>T</span>
-          <span>C</span>
-          <span>H</span>
-          <span>E</span>
-          <span>D</span>
-        </div>
-      </button>
-    </div>
-
-    <div class="lib-btn-container-4">
-      <button class="lib-btn-55">
-        <div class="lib-original">Queue</div>
-        <div class="lib-letters">
-          <!-- Place each letter in its own element -->
-          <span>Q</span>
-          <span>U</span>
-          <span>E</span>
-          <span>U</span>
-          <span>E</span>
-        </div>
-      </button>
-    </div>
-
-    <div class="lib-btn-container-5">
-      <button class="lib-btn-56">
-        <div class="lib-original">clear</div>
-        <div class="lib-letters">
-          <!-- Place each letter in its own element -->
-          <span>C</span>
-          <span>L</span>
-          <span>E</span>
-          <span>A</span>
-          <span>R</span>
-        </div>
-      </button>
-    </div>
-  </section>
-</header>
-
-<!-- <script>
-          function redirectToIndex() {
-            window.location.href = 'index.html';
-          }
-        </script> -->
-<!-- <script>
-  function redirectToLibrary() {
-    window.location.href = 'library.html';
-  }
-</script> -->
+<div class="library"><p>You will find your movies here</p></div>
