--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -34,28 +34,38 @@
         <div class="footer-content">
             <div class="footer-cards">
                 <div class="footer-team-card">
-                    <img class="footer-image-container" src="./images/bogdan-nemes.jpg" alt="Bogdan Nemes" />
+                    <picture class="footer-image-container">
+                        <img class="footer-img-size" src="./images/bogdan-nemes.jpg" alt="Bogdan Nemes" width="80px"/>
+                    </picture>
+                    
                     <div class="footer-member-info">
                         <span class="footer-team-name">Bogdan Nemes</span>
                         <em class="footer-team-function">Team leader</em>
                     </div>
                     <div class="footer-icon-cards">
                         <a 
-                            href="https://https://github.com/Tumoji" 
+                            href="https://github.com/Tumoji" 
                             class="footer-github-icon" 
                             aria-label="github"
+                            target="_blank"
+                            rel="noreferrer noopener"
                             >     
                         </a>
                         <a 
                             href="https://linkedin.com/in/bogdan-nemes-b35841a7" 
                             class="footer-linkedin-icon" 
                             aria-label="linkedin"
+                            target="_blank"
+                            rel="noreferrer noopener"
                             >
                         </a>
                     </div>
                 </div>
                 <div class="footer-team-card">
-                    <img class="footer-image-container" src="./images/dan_retegan.jpg" alt="Dan Retegan" />
+                    <picture class="footer-image-container">
+                        <img class="footer-img-size" src="./images/dan_retegan.jpg" alt="Dan Retegan" width="80px"/>
+                    </picture>
+                    
                     <div class="footer-member-info">
                         <span class="footer-team-name">Dan Retegan</span>
                         <em class="footer-team-function">Scrum master</em>
@@ -65,18 +75,24 @@
                             href="https://github.com/danretegan" 
                             class="footer-github-icon" 
                             aria-label="github"
+                            target="_blank"
+                            rel="noreferrer noopener"
                             >     
                         </a>
                         <a 
                             href="https://www.linkedin.com/in/dan-retegan-25a7a92a4" 
                             class="footer-linkedin-icon" 
                             aria-label="linkedin"
+                            target="_blank"
+                            rel="noreferrer noopener"
                             >
                         </a>
                     </div>
                 </div>
                 <div class="footer-team-card">
-                    <img class="footer-image-container" src="./images/ciprian-ropcean.jpg" alt="Ciprian Ropcean" />
+                    <picture class="footer-image-container">
+                        <img class="footer-img-size" src="./images/ciprian-ropcean.jpg" alt="Ciprian Ropcean" width="80px"/>
+                    </picture>
                     <div class="footer-member-info">
                         <span class="footer-team-name">Ciprian Ropcean</span>
                         <em class="footer-team-function">Frontend developer</em>
@@ -86,54 +102,70 @@
                             href="https://github.com/Cipick23" 
                             class="footer-github-icon" 
                             aria-label="github"
+                            target="_blank"
+                            rel="noreferrer noopener"
                             >     
                         </a>
                         <a 
                             href="https://www.linkedin.com/in/ciprianropcean/" 
                             class="footer-linkedin-icon" 
                             aria-label="linkedin"
+                            target="_blank"
+                            rel="noreferrer noopener"
                             >
                         </a>
                     </div>
                 </div>
                 <div class="footer-team-card">
-                    <img class="footer-image-container" src="./images/andrei-rusu.jpg" alt="Andrei Rusu" />
+                    <picture class="footer-image-container">
+                        <img class="footer-img-size" src="./images/andrei-rusu.jpg" alt="Andrei Rusu" width="80px"/>
+                    </picture>
                     <div class="footer-member-info">
                         <span class="footer-team-name">Andrei Rusu</span>
                         <em class="footer-team-function">Frontend developer</em>
                     </div>
                     <div class="footer-icon-cards">
                         <a 
-                            href="https://https://github.com/Tumoji" 
+                            href="https://github.com/adad22ro" 
                             class="footer-github-icon" 
                             aria-label="github"
+                            target="_blank"
+                            rel="noreferrer noopener"
                             >     
                         </a>
                         <a 
-                            href="https://linkedin.com/in/bogdan-nemes-b35841a7" 
+                            href="https://linkedin.com/" 
                             class="footer-linkedin-icon" 
                             aria-label="linkedin"
+                            target="_blank"
+                            rel="noreferrer noopener"
                             >
                         </a>
                     </div>
                 </div>
                 <div class="footer-team-card">
-                    <img class="footer-image-container" src="./images/simon-khawam.jpg" alt="Simon Khawam" />
+                    <picture class="footer-image-container">
+                        <img class="footer-img-size" src="./images/simon-khawam.jpg" alt="Simon Khawam" width="80px"/>
+                    </picture>
                     <div class="footer-member-info">
                         <span class="footer-team-name">Simon Khawam</span>
                         <em class="footer-team-function">Frontend developer</em>
                     </div>
                     <div class="footer-icon-cards">
                         <a 
-                            href="https://https://github.com/Tumoji" 
+                            href="https://github.com/Tumoji/javascript-proiect-grupa-1" 
                             class="footer-github-icon" 
                             aria-label="github"
+                            target="_blank"
+                            rel="noreferrer noopener"
                             >     
                         </a>
                         <a 
-                            href="https://linkedin.com/in/bogdan-nemes-b35841a7" 
+                            href="https://linkedin.com" 
                             class="footer-linkedin-icon" 
                             aria-label="linkedin"
+                            target="_blank"
+                            rel="noreferrer noopener"
                             >
                         </a>
                     </div>
