--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,7 @@
 @import './header.css';
 @import './search-movies.css';
 @import './gallery.css';
+@import './pagination.css';
 @import './modal.css';
 @import './my-library.css';
 @import './footer.css';
