--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -35,7 +35,7 @@
             <div class="footer-cards">
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
-                        <img class="footer-img-size" src="./images/bogdan-nemes.jpg" alt="Bogdan Nemes" width="80px"/>
+                        <img class="footer-img-size" src="./images/bogdan-nemes.jpg" alt="Bogdan Nemes"/>
                     </picture>
                     
                     <div class="footer-member-info">
@@ -63,7 +63,7 @@
                 </div>
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
-                        <img class="footer-img-size" src="./images/dan_retegan.jpg" alt="Dan Retegan" width="80px"/>
+                        <img class="footer-img-size" src="./images/dan_retegan.jpg" alt="Dan Retegan"/>
                     </picture>
                     
                     <div class="footer-member-info">
@@ -91,7 +91,7 @@
                 </div>
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
-                        <img class="footer-img-size" src="./images/ciprian-ropcean.jpg" alt="Ciprian Ropcean" width="80px"/>
+                        <img class="footer-img-size" src="./images/ciprian-ropcean.jpg" alt="Ciprian Ropcean"/>
                     </picture>
                     <div class="footer-member-info">
                         <span class="footer-team-name">Ciprian Ropcean</span>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
-                        <img class="footer-img-size" src="./images/andrei-rusu.jpg" alt="Andrei Rusu" width="80px"/>
+                        <img class="footer-img-size" src="./images/andrei-rusu.jpg" alt="Andrei Rusu"/>
                     </picture>
                     <div class="footer-member-info">
                         <span class="footer-team-name">Andrei Rusu</span>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
-                        <img class="footer-img-size" src="./images/simon-khawam.jpg" alt="Simon Khawam" width="80px"/>
+                        <img class="footer-img-size" src="./images/simon-khawam.jpg" alt="Simon Khawam"/>
                     </picture>
                     <div class="footer-member-info">
                         <span class="footer-team-name">Simon Khawam</span>
