--- a/src/css/header.css
+++ b/src/css/header.css
@@ -67,6 +67,7 @@ header {
   height: 100px;
   z-index: 2;
   margin-top: 20px;
+  cursor: pointer;
   justify-content: center;
   /* background-color: aqua; */
 }
