--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -35,6 +35,7 @@
             <div class="footer-cards">
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
+                        <source srcset="./images/bogdan-nemes@2x.webp" type="image/webp"/>
                         <img class="footer-img-size" src="./images/bogdan-nemes.jpg" alt="Bogdan Nemes"/>
                     </picture>
                     
@@ -63,6 +64,7 @@
                 </div>
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
+                        <source srcset="./images/dan_retegan@2x.webp" type="image/webp"/>
                         <img class="footer-img-size" src="./images/dan_retegan.jpg" alt="Dan Retegan"/>
                     </picture>
                     
@@ -91,6 +93,7 @@
                 </div>
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
+                        <source srcset="./images/ciprian-ropcean@2x.webp" type="image/webp"/>
                         <img class="footer-img-size" src="./images/ciprian-ropcean.jpg" alt="Ciprian Ropcean"/>
                     </picture>
                     <div class="footer-member-info">
@@ -118,6 +121,7 @@
                 </div>
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
+                        <source srcset="./images/andrei-rusu@2x.webp" type="image/webp"/>
                         <img class="footer-img-size" src="./images/andrei-rusu.jpg" alt="Andrei Rusu"/>
                     </picture>
                     <div class="footer-member-info">
@@ -145,6 +149,7 @@
                 </div>
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
+                        <source srcset="./images/simon-khawam@2x.webp" type="image/webp"/>
                         <img class="footer-img-size" src="./images/simon-khawam.jpg" alt="Simon Khawam"/>
                     </picture>
                     <div class="footer-member-info">
